k8s/search/deployment-search.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-deployment
  namespace: p-go-search
  labels:
    app: search-persona
spec:
  replicas: 2
  selector:
    matchLabels:
      app: search-persona
  template:
    metadata:
      labels:
        app: search-persona
    spec:
      nodeSelector:
        workload: search
      imagePullSecrets:
        - name: dockerhub-secret
      containers:
        - name: search-container
          image: danysoftdev/p-go-search:latest
          ports:
            - containerPort: 8080
