k8s/search/pod-search.yaml
apiVersion: v1
kind: Pod
metadata:
  name: search-pod
  namespace: p-go-search
  labels:
    app: search-persona
spec:
  nodeSelector:
    workload: search
  imagePullSecrets:
    - name: dockerhub-secret
  containers:
    - name: search-container
      image: danysoftdev/p-go-search:latest
      ports:
        - containerPort: 8080
