k8s/search/service-search.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-service
  namespace: p-go-search
  labels:
    app: search-persona
spec:
  selector:
    app: search-persona
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8080
  type: ClusterIP
