k8s/search/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personas-search-ingress
  namespace: p-go-search
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /buscar(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: search-service
                port:
                  number: 8082
